--- a/contact.html
+++ b/contact.html
@@ -46,20 +46,20 @@
             <h2>Contact Us</h2>
             <p>If you have any questions, inquiries, or just want to get in touch, please fill out the form below and we will respond as soon as possible.</p>
             <form action="/contact" method="post">
-                <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" placeholder="Your Name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" placeholder="Your Email" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message:</label>
-                    <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
-                </div>
-                <button type="submit">Submit</button>
-            </form>
+              <div class="form-group">
+                  <label for="name">Your Name:</label>
+                  <input type="text" id="name" name="name" placeholder="Your Name" required>
+              </div>
+              <div class="form-group">
+                  <label for="email">Your Email:</label>
+                  <input type="email" id="email" name="email" placeholder="Your Email" required>
+              </div>
+              <div class="form-group">
+                  <label for="message">Message:</label>
+                  <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
+              </div>
+              <button type="submit">Submit</button>
+          </form>
         </section>
     </main>
 
