added mobile fronted for phones and tablets

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="header-container">
           <a href="index.html">
-            <img src="assets/logo.png" alt="logo and home link" width="300" class="header-image">
+            <img src="assets/logo.png" alt="logo and home link" class="header-image">
           </a>
           <ul class="social-media">
             <li>
@@ -27,7 +27,7 @@
             </li>
             <li>
               <a href="https://www.instagram.com/scottflemingmusicandvoice/" target="_blank">
-                <img src="assets/instagram.webp" alt="instagram" class="social-icon">
+                <img src="assets/instagram.webp" alt="Instagram" class="social-icon">
               </a>
             </li>
             <li>
@@ -36,10 +36,10 @@
               </a>
             </li>
             <li>
-                <a href="https://x.com/rsfoscar2" target="_blank">
-                  <img src="assets/twitter.png" alt="X" class="social-icon">
-                </a>
-              </li>
+              <a href="https://x.com/rsfoscar2" target="_blank">
+                <img src="assets/twitter.png" alt="Twitter" class="social-icon">
+              </a>
+            </li>
           </ul>
         </div>
     </header>
@@ -52,94 +52,41 @@
                 Scott Fleming is a highly experienced performer with over 30 years in theatre, television, audiobooks, and voice coaching. He has taken leading roles in London’s West End and UK touring productions, building a distinguished career in the performing arts. Born and raised in Cornwall, he is now based in Truro, where he continues to perform and teach. As a voice actor and audiobook narrator, Scott has narrated over 100 titles, including works by authors like Colin Forbes and Richard Doyle. Notably, he brought ‘The Greek Key’, an espionage thriller, to life with his versatile narration skills and recently he has been working on A.C Salter’s ‘Bane of the North’ series for Audible. Since 2005, Scott has also been a vocal and acting coach, mentoring aspiring performers across various styles such as musical theatre and contemporary vocals. His Scott Fleming Voice Academy offers in person and online training to students and professionals worldwide. Alongside coaching, Scott is an award winning songwriter and remains active in composing, acting and voiceover work. He has appeared in 4 series of Doc Martin for ITV1.
               </p>
             </div>
-          </section>
-          
-
-
-          
-
-        <section id="projects" class="section">
-          <div class="container">
-            <h2>Projects</h2>
-            <div class="projects-grid">
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/Gallows-Born-Audiobook/B0DKLS3YSZ" target="_blank">
-                  <img src="assets/gallow.jpg" alt="gallow" width="300">
-                </a>
-              </div>
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/The-Greek-Key-Audiobook/B0CVNJY9GV" target="_blank">
-                  <img src="assets/greekkey.jpg" alt="greek" width="300">
-                </a>
-              </div>
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/The-Winds-of-Change-Audiobook/B0DMFTR1FS?ref_pageloadid=not_applicable&pf_rd_p=3a993200-e281-426d-b228-794441551983&pf_rd_r=EA0XVYT8SJV653ZFF1RW&plink=RQbbI0bbsak2MuHA&pageLoadId=rPeRb8KBn3PSg9sN&creativeId=c5e7b07e-1254-41c0-baf7-d1faa9e73eb3&ref=a_series_Th_c4_lProduct_1_1" target="_blank">
-                  <img src="assets/elementsoftime.jpg" alt="teot" width="300">
-                </a>
-              </div>
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/The-Memory-of-an-Elephant-Audiobook/B0B452LSXX?qid=1739222160&sr=1-24&ref_pageloadid=riqNifuTraGsD5AN&pf_rd_p=c6e316b8-14da-418d-8f91-b3cad83c5183&pf_rd_r=1HGJHHJ9NRJP67SQGKXW&plink=Jc1upCDgfqAGqDFU&pageLoadId=Y1nd9XvoYKjUHhpa&creativeId=41e85e98-10b8-40e2-907d-6b663f04a42d&ref=a_search_c3_lProduct_2_4" target="_blank">
-                  <img src="assets/elephant.jpg" alt="Elephant" width="300">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="projects-grid">
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/Deaths-Justice-Audiobook/B0DBRRK2V9?qid=1739282304&sr=1-12&ref_pageloadid=not_applicable&pf_rd_p=c6e316b8-14da-418d-8f91-b3cad83c5183&pf_rd_r=BGH6ZENN6XVXDSC0ECPN&plink=7PUfwpcCKX5oTFH1&pageLoadId=jM6SDYrCFCvgiZpL&creativeId=41e85e98-10b8-40e2-907d-6b663f04a42d&ref=a_search_c3_lProduct_1_12" target="_blank">
-                  <img src="assets/justice.jpg" alt="justice" width="300">
-                </a>
-              </div>
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/Secret-Places-Audiobook/B0CHK6XRDZ?qid=1739282343&sr=1-14&ref_pageloadid=not_applicable&pf_rd_p=c6e316b8-14da-418d-8f91-b3cad83c5183&pf_rd_r=4MHV9X4GTK4Y3AHR1RDW&plink=pF8ztmB0wYTP3Gn5&pageLoadId=JGtsV6pprrkccXHo&creativeId=41e85e98-10b8-40e2-907d-6b663f04a42d&ref=a_search_c3_lProduct_1_14" target="_blank">
-                  <img src="assets/Places.jpg" alt="places" width="300">
-                </a>
-              </div>
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/Lets-Get-Real-Audiobook/B0DTL84QYD" target="_blank">
-                  <img src="assets/getreal.jpg" alt="real" width="300">
-                </a>
-              </div>
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/Property-Auctions-Audiobook/B0C75CM31Z?eac_link=WglxqSJ9l2Lq&ref=web_search_eac_asin_1&eac_selected_type=asin&eac_selected=B0C75CM31Z&qid=1DLdYU6RQF&eac_id=262-2182296-4930161_1DLdYU6RQF&sr=1-1" target="_blank">
-                  <img src="assets/property.jpg" alt="property" width="300">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="projects-grid">
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/Storm-of-War-Audiobook/B0C672HSFQ?qid=1739281898&sr=1-39&ref_pageloadid=eLl9eSB5jMYRBpnx&pf_rd_p=c6e316b8-14da-418d-8f91-b3cad83c5183&pf_rd_r=CH2KKHGP8GNA3SY5HQTN&plink=ZmkyzmAlYuNHiefg&pageLoadId=AWedEfV6RTeYAjPv&creativeId=41e85e98-10b8-40e2-907d-6b663f04a42d&ref=a_search_c3_lProduct_2_19" target="_blank">
-                  <img src="assets/stormofwar.jpg" alt="storm" width="300">
-                </a>
-              </div>
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/Curing-Time-Audiobook/B0DHLRHZKM?qid=1739281977&sr=1-68&ref_pageloadid=yXcj77lW2QSX3WfT&pf_rd_p=c6e316b8-14da-418d-8f91-b3cad83c5183&pf_rd_r=D43DV1SQYT6YGS2QX4CK&plink=MfD82E8TGvAl1QBi&pageLoadId=iC15GJcZQoZ9YdqP&creativeId=41e85e98-10b8-40e2-907d-6b663f04a42d&ref=a_search_c3_lProduct_2_18" target="_blank">
-                  <img src="assets/curingtime.jpg" alt="curing" width="300">
-                </a>
-              </div>
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/Cut-the-Canarys-Claws-Audiobook/B0D6X3KK91?qid=1739282012&sr=1-37&ref_pageloadid=iC15GJcZQoZ9YdqP&pf_rd_p=c6e316b8-14da-418d-8f91-b3cad83c5183&pf_rd_r=EKPFC4CTEAJYHXYRRZXJ&plink=znq3KCXyn92C17TD&pageLoadId=MUr8I1A6eHHIa2bx&creativeId=41e85e98-10b8-40e2-907d-6b663f04a42d&ref=a_search_c3_lProduct_1_37" target="_blank">
-                  <img src="assets/claws.jpg" alt="claw" width="300">
-                </a>
-              </div>
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/Deluge-Audiobook/B0CYNPNVDC" target="_blank">
-                  <img src="assets/deluge.jpg" alt="deluge" width="300">
-                </a>
-              </div>
-            </div>
-          </div>
-            <a href="https://www.audible.co.uk/search?searchNarrator=Scott+Fleming" target="_blank">
-              <img src="assets/audiblelogofull.png" alt="audible link" width="300" class="center-image">
-            </a>
         </section>
 
+        <section id="projects" class="section">
+          <div class="projects-grid">
+            <div class="project-card">
+              <a href="https://www.audible.co.uk/pd/Gallows-Born-Audiobook/B0DKLS3YSZ" target="_blank">
+                <img src="assets/gallow.jpg" alt="Gallows Born">
+              </a>
+            </div>
+            <div class="project-card">
+              <a href="https://www.audible.co.uk/pd/The-Greek-Key-Audiobook/B0CVNJY9GV" target="_blank">
+                <img src="assets/greekkey.jpg" alt="The Greek Key">
+              </a>
+            </div>
+            <div class="project-card">
+              <a href="https://www.audible.co.uk/pd/The-Winds-of-Change-Audiobook/B0DMFTR1FS" target="_blank">
+                <img src="assets/elementsoftime.jpg" alt="The Winds of Change">
+              </a>
+            </div>
+            <div class="project-card">
+              <a href="https://www.audible.co.uk/pd/The-Memory-of-an-Elephant-Audiobook/B0B452LSXX" target="_blank">
+                <img src="assets/elephant.jpg" alt="The Memory of an Elephant">
+              </a>
+            </div>
+          </div>
+        </section>
+
+        <a href="https://www.audible.co.uk/search?searchNarrator=Scott+Fleming" target="_blank">
+          <img src="assets/audiblelogofull.png" alt="Audible Link" class="center-image">
+        </a>
     </main>
-    <footer style="background-color: #333; color: white; text-align: center; padding: 20px;">
+
+    <footer>
       <a href="contact.html" class="footer-link">Contact Me Here</a>
     </footer>
 </body>
 </html>
+
