added back all projects

--- a/index.html
+++ b/index.html
@@ -77,6 +77,57 @@
               </a>
             </div>
           </div>
+          <div class="container">
+            <div class="projects-grid">
+              <div class="project-card">
+                <a href="https://www.audible.co.uk/pd/Deaths-Justice-Audiobook/B0DBRRK2V9?qid=1739282304&sr=1-12&ref_pageloadid=not_applicable&pf_rd_p=c6e316b8-14da-418d-8f91-b3cad83c5183&pf_rd_r=BGH6ZENN6XVXDSC0ECPN&plink=7PUfwpcCKX5oTFH1&pageLoadId=jM6SDYrCFCvgiZpL&creativeId=41e85e98-10b8-40e2-907d-6b663f04a42d&ref=a_search_c3_lProduct_1_12" target="_blank">
+                  <img src="assets/justice.jpg" alt="justice" width="300">
+                </a>
+              </div>
+              <div class="project-card">
+                <a href="https://www.audible.co.uk/pd/Secret-Places-Audiobook/B0CHK6XRDZ?qid=1739282343&sr=1-14&ref_pageloadid=not_applicable&pf_rd_p=c6e316b8-14da-418d-8f91-b3cad83c5183&pf_rd_r=4MHV9X4GTK4Y3AHR1RDW&plink=pF8ztmB0wYTP3Gn5&pageLoadId=JGtsV6pprrkccXHo&creativeId=41e85e98-10b8-40e2-907d-6b663f04a42d&ref=a_search_c3_lProduct_1_14" target="_blank">
+                  <img src="assets/Places.jpg" alt="places" width="300">
+                </a>
+              </div>
+              <div class="project-card">
+                <a href="https://www.audible.co.uk/pd/Lets-Get-Real-Audiobook/B0DTL84QYD" target="_blank">
+                  <img src="assets/getreal.jpg" alt="real" width="300">
+                </a>
+              </div>
+              <div class="project-card">
+                <a href="https://www.audible.co.uk/pd/Property-Auctions-Audiobook/B0C75CM31Z?eac_link=WglxqSJ9l2Lq&ref=web_search_eac_asin_1&eac_selected_type=asin&eac_selected=B0C75CM31Z&qid=1DLdYU6RQF&eac_id=262-2182296-4930161_1DLdYU6RQF&sr=1-1" target="_blank">
+                  <img src="assets/property.jpg" alt="property" width="300">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="projects-grid">
+              <div class="project-card">
+                <a href="https://www.audible.co.uk/pd/Storm-of-War-Audiobook/B0C672HSFQ?qid=1739281898&sr=1-39&ref_pageloadid=eLl9eSB5jMYRBpnx&pf_rd_p=c6e316b8-14da-418d-8f91-b3cad83c5183&pf_rd_r=CH2KKHGP8GNA3SY5HQTN&plink=ZmkyzmAlYuNHiefg&pageLoadId=AWedEfV6RTeYAjPv&creativeId=41e85e98-10b8-40e2-907d-6b663f04a42d&ref=a_search_c3_lProduct_2_19" target="_blank">
+                  <img src="assets/stormofwar.jpg" alt="storm" width="300">
+                </a>
+              </div>
+              <div class="project-card">
+                <a href="https://www.audible.co.uk/pd/Curing-Time-Audiobook/B0DHLRHZKM?qid=1739281977&sr=1-68&ref_pageloadid=yXcj77lW2QSX3WfT&pf_rd_p=c6e316b8-14da-418d-8f91-b3cad83c5183&pf_rd_r=D43DV1SQYT6YGS2QX4CK&plink=MfD82E8TGvAl1QBi&pageLoadId=iC15GJcZQoZ9YdqP&creativeId=41e85e98-10b8-40e2-907d-6b663f04a42d&ref=a_search_c3_lProduct_2_18" target="_blank">
+                  <img src="assets/curingtime.jpg" alt="curing" width="300">
+                </a>
+              </div>
+              <div class="project-card">
+                <a href="https://www.audible.co.uk/pd/Cut-the-Canarys-Claws-Audiobook/B0D6X3KK91?qid=1739282012&sr=1-37&ref_pageloadid=iC15GJcZQoZ9YdqP&pf_rd_p=c6e316b8-14da-418d-8f91-b3cad83c5183&pf_rd_r=EKPFC4CTEAJYHXYRRZXJ&plink=znq3KCXyn92C17TD&pageLoadId=MUr8I1A6eHHIa2bx&creativeId=41e85e98-10b8-40e2-907d-6b663f04a42d&ref=a_search_c3_lProduct_1_37" target="_blank">
+                  <img src="assets/claws.jpg" alt="claw" width="300">
+                </a>
+              </div>
+              <div class="project-card">
+                <a href="https://www.audible.co.uk/pd/Deluge-Audiobook/B0CYNPNVDC" target="_blank">
+                  <img src="assets/deluge.jpg" alt="deluge" width="300">
+                </a>
+              </div>
+            </div>
+          </div>
+            <a href="https://www.audible.co.uk/search?searchNarrator=Scott+Fleming" target="_blank">
+              <img src="assets/audiblelogofull.png" alt="audible link" width="300" class="center-image">
+            </a>
         </section>
 
         <div class="audible-link">
