--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="about-container">
               <img src="assets/profile.jpg" alt="Scott Fleming headshot" class="profile-img">
               <p class="about-description">
-                Scott Fleming is a highly experienced performer with over 30 years in theatre, television, audiobooks, and voice coaching. He has taken leading roles in London’s West End and UK touring productions, building a distinguished career in the performing arts. Born and raised in Cornwall, he is now based in Truro, where he continues to perform and teach. As a voice actor and audiobook narrator, Scott has narrated over 100 titles, including works by authors like Colin Forbes and Richard Doyle. Notably, he brought ‘The Greek Key’, an espionage thriller, to life with his versatile narration skills and recently he has been working on A.C Salter’s ‘Bane of the North’ series for Audible. Since 2005, Scott has also been a vocal and acting coach, mentoring aspiring performers across various styles such as musical theatre and contemporary vocals. His Scott Fleming Voice Academy offers in person and online training to students and professionals worldwide. Alongside coaching, Scott is an award-winning songwriter and remains active in composing, acting and voiceover work. He has appeared in 4 series of Doc Martin for ITV1.
+                Scott Fleming is a highly experienced performer with over 30 years in theatre, television, audiobooks, and voice coaching...
               </p>
             </div>
         </section>
@@ -76,51 +76,45 @@
                 <img src="assets/elephant.jpg" alt="The Memory of an Elephant">
               </a>
             </div>
-          </div>
-            <div class="projects-grid">
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/Deaths-Justice-Audiobook/B0DBRRK2V9?qid=1739282304&sr=1-12&ref_pageloadid=not_applicable&pf_rd_p=c6e316b8-14da-418d-8f91-b3cad83c5183&pf_rd_r=BGH6ZENN6XVXDSC0ECPN&plink=7PUfwpcCKX5oTFH1&pageLoadId=jM6SDYrCFCvgiZpL&creativeId=41e85e98-10b8-40e2-907d-6b663f04a42d&ref=a_search_c3_lProduct_1_12" target="_blank">
-                  <img src="assets/justice.jpg" alt="justice" width="300">
-                </a>
-              </div>
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/Secret-Places-Audiobook/B0CHK6XRDZ?qid=1739282343&sr=1-14&ref_pageloadid=not_applicable&pf_rd_p=c6e316b8-14da-418d-8f91-b3cad83c5183&pf_rd_r=4MHV9X4GTK4Y3AHR1RDW&plink=pF8ztmB0wYTP3Gn5&pageLoadId=JGtsV6pprrkccXHo&creativeId=41e85e98-10b8-40e2-907d-6b663f04a42d&ref=a_search_c3_lProduct_1_14" target="_blank">
-                  <img src="assets/Places.jpg" alt="places" width="300">
-                </a>
-              </div>
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/Lets-Get-Real-Audiobook/B0DTL84QYD" target="_blank">
-                  <img src="assets/getreal.jpg" alt="real" width="300">
-                </a>
-              </div>
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/Property-Auctions-Audiobook/B0C75CM31Z?eac_link=WglxqSJ9l2Lq&ref=web_search_eac_asin_1&eac_selected_type=asin&eac_selected=B0C75CM31Z&qid=1DLdYU6RQF&eac_id=262-2182296-4930161_1DLdYU6RQF&sr=1-1" target="_blank">
-                  <img src="assets/property.jpg" alt="property" width="300">
-                </a>
-              </div>
+            <div class="project-card">
+              <a href="https://www.audible.co.uk/pd/Deaths-Justice-Audiobook/B0DBRRK2V9" target="_blank">
+                <img src="assets/justice.jpg" alt="Death's Justice">
+              </a>
             </div>
-          </div>
-            <div class="projects-grid">
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/Storm-of-War-Audiobook/B0C672HSFQ?qid=1739281898&sr=1-39&ref_pageloadid=eLl9eSB5jMYRBpnx&pf_rd_p=c6e316b8-14da-418d-8f91-b3cad83c5183&pf_rd_r=CH2KKHGP8GNA3SY5HQTN&plink=ZmkyzmAlYuNHiefg&pageLoadId=AWedEfV6RTeYAjPv&creativeId=41e85e98-10b8-40e2-907d-6b663f04a42d&ref=a_search_c3_lProduct_2_19" target="_blank">
-                  <img src="assets/stormofwar.jpg" alt="storm" width="300">
-                </a>
-              </div>
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/Curing-Time-Audiobook/B0DHLRHZKM?qid=1739281977&sr=1-68&ref_pageloadid=yXcj77lW2QSX3WfT&pf_rd_p=c6e316b8-14da-418d-8f91-b3cad83c5183&pf_rd_r=D43DV1SQYT6YGS2QX4CK&plink=MfD82E8TGvAl1QBi&pageLoadId=iC15GJcZQoZ9YdqP&creativeId=41e85e98-10b8-40e2-907d-6b663f04a42d&ref=a_search_c3_lProduct_2_18" target="_blank">
-                  <img src="assets/curingtime.jpg" alt="curing" width="300">
-                </a>
-              </div>
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/Cut-the-Canarys-Claws-Audiobook/B0D6X3KK91?qid=1739282012&sr=1-37&ref_pageloadid=iC15GJcZQoZ9YdqP&pf_rd_p=c6e316b8-14da-418d-8f91-b3cad83c5183&pf_rd_r=EKPFC4CTEAJYHXYRRZXJ&plink=znq3KCXyn92C17TD&pageLoadId=MUr8I1A6eHHIa2bx&creativeId=41e85e98-10b8-40e2-907d-6b663f04a42d&ref=a_search_c3_lProduct_1_37" target="_blank">
-                  <img src="assets/claws.jpg" alt="claw" width="300">
-                </a>
-              </div>
-              <div class="project-card">
-                <a href="https://www.audible.co.uk/pd/Deluge-Audiobook/B0CYNPNVDC" target="_blank">
-                  <img src="assets/deluge.jpg" alt="deluge" width="300">
-                </a>
-              </div>
+            <div class="project-card">
+              <a href="https://www.audible.co.uk/pd/Secret-Places-Audiobook/B0CHK6XRDZ" target="_blank">
+                <img src="assets/Places.jpg" alt="Secret Places">
+              </a>
+            </div>
+            <div class="project-card">
+              <a href="https://www.audible.co.uk/pd/Lets-Get-Real-Audiobook/B0DTL84QYD" target="_blank">
+                <img src="assets/getreal.jpg" alt="Let's Get Real">
+              </a>
+            </div>
+            <div class="project-card">
+              <a href="https://www.audible.co.uk/pd/Property-Auctions-Audiobook/B0C75CM31Z" target="_blank">
+                <img src="assets/property.jpg" alt="Property Auctions">
+              </a>
+            </div>
+            <div class="project-card">
+              <a href="https://www.audible.co.uk/pd/Storm-of-War-Audiobook/B0C672HSFQ" target="_blank">
+                <img src="assets/stormofwar.jpg" alt="Storm of War">
+              </a>
+            </div>
+            <div class="project-card">
+              <a href="https://www.audible.co.uk/pd/Curing-Time-Audiobook/B0DHLRHZKM" target="_blank">
+                <img src="assets/curingtime.jpg" alt="Curing Time">
+              </a>
+            </div>
+            <div class="project-card">
+              <a href="https://www.audible.co.uk/pd/Cut-the-Canarys-Claws-Audiobook/B0D6X3KK91" target="_blank">
+                <img src="assets/claws.jpg" alt="Cut the Canary's Claws">
+              </a>
+            </div>
+            <div class="project-card">
+              <a href="https://www.audible.co.uk/pd/Deluge-Audiobook/B0CYNPNVDC" target="_blank">
+                <img src="assets/deluge.jpg" alt="Deluge">
+              </a>
             </div>
           </div>
         </section>
@@ -137,5 +131,6 @@
     </footer>
 </body>
 </html>
+
 
 
