more design changes

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="about-container">
               <img src="assets/profile.jpg" alt="Scott Fleming headshot" class="profile-img">
               <p class="about-description">
-                Scott Fleming is a highly experienced performer with over 30 years in theatre, television, audiobooks, and voice coaching...
+              Scott Fleming is a highly experienced performer with over 30 years in theatre, television, audiobooks, and voice coaching. He has taken leading roles in London’s West End and UK touring productions, building a distinguished career in the performing arts. Born and raised in Cornwall, he is now based in Truro, where he continues to perform and teach. As a voice actor and audiobook narrator, Scott has narrated over 100 titles, including works by authors like Colin Forbes and Richard Doyle. Notably, he brought ‘The Greek Key’, an espionage thriller, to life with his versatile narration skills and recently he has been working on A.C Salter’s ‘Bane of the North’ series for Audible. Since 2005, Scott has also been a vocal and acting coach, mentoring aspiring performers across various styles such as musical theatre and contemporary vocals. His Scott Fleming Voice Academy offers in person and online training to students and professionals worldwide. Alongside coaching, Scott is an award-winning songwriter and remains active in composing, acting and voiceover work. He has appeared in 4 series of Doc Martin for ITV1.
               </p>
             </div>
         </section>
