even more design changes

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         </section>
 
         <section id="projects" class="section">
+          <h2 class = "section-title">Projects:</h2>
           <div class="projects-grid">
             <div class="project-card">
               <a href="https://www.audible.co.uk/pd/Gallows-Born-Audiobook/B0DKLS3YSZ" target="_blank">
