Changed 2 audiobooks in projects and updated some text.

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
             <h2 class="section-title">Voice Reels</h2>
             <div class="audio-container">
             <div class="audio-block">
-                <h3>Audio Book - Native British</h3>
+                <h3>Audiobook - General British</h3>
                 <audio controls>
                     <source src="assets/SCOTT FLEMING - Audiobook reel - General British.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div class="audio-block">
-                <h3>Audio Book - Native American</h3>
+                <h3>Audiobook - General American</h3>
                 <audio controls>
                     <source src="assets/SCOTT FLEMING - Audiobook reel - General American.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
@@ -106,13 +106,13 @@
               </a>
             </div>
             <div class="project-card">
-              <a href="https://www.audible.co.uk/pd/Lets-Get-Real-Audiobook/B0DTL84QYD" target="_blank">
-                <img src="assets/getreal.jpg" alt="Let's Get Real">
+              <a href="https://www.audible.co.uk/pd/The-Exile-Audiobook/B0F2CKBB9G?ref_pageloadid=not_applicable&pf_rd_p=3a993200-e281-426d-b228-794441551983&pf_rd_r=SXQRA15RKTXN4AYFR884&plink=yoCB9LECOpNKBdOt&pageLoadId=RqliXzchePoy4GLJ&creativeId=c5e7b07e-1254-41c0-baf7-d1faa9e73eb3&ref=a_series_So_c4_lProduct_1_1" target="_blank">
+                <img src="assets/The_Exile.jpg" alt="The Exile">
               </a>
             </div>
             <div class="project-card">
-              <a href="https://www.audible.co.uk/pd/Property-Auctions-Audiobook/B0C75CM31Z" target="_blank">
-                <img src="assets/property.jpg" alt="Property Auctions">
+              <a href="https://www.audible.co.uk/pd/Thunderbird-Rising-Audiobook/B0DZ328P67" target="_blank">
+                <img src="assets/Thunderbird_Rising.jpg" alt="Thunderbird Rising">
               </a>
             </div>
             <div class="project-card">
