Added next bio text, changed css to accomodate the new studio tech section. added in links and stock photo to be changed.

--- a/index.html
+++ b/index.html
@@ -45,34 +45,73 @@
     </header>
       
     <main>
-        <section id="about" class="section">
-            <div class="about-container">
-              <img src="assets/profile.jpg" alt="Scott Fleming headshot" class="profile-img">
-              <p class="about-description">
-              Scott Fleming is a highly experienced performer with over 30 years in theatre, television, audiobooks, and voice coaching. He has taken leading roles in London’s West End and UK touring productions, building a distinguished career in the performing arts. Born and raised in Cornwall, he is now based in Truro, where he continues to perform and teach. As a voice actor and audiobook narrator, Scott has narrated over 100 titles, including works by authors like Colin Forbes and Richard Doyle. Notably, he brought ‘The Greek Key’, an espionage thriller, to life with his versatile narration skills and recently he has been working on A.C Salter’s ‘Bane of the North’ series for Audible. Since 2005, Scott has also been a vocal and acting coach, mentoring aspiring performers across various styles such as musical theatre and contemporary vocals. His Scott Fleming Voice Academy offers in person and online training to students and professionals worldwide. Alongside coaching, Scott is an award-winning songwriter and remains active in composing, acting and voiceover work. He has appeared in 4 series of Doc Martin for ITV1.
-              </p>
-            </div>
-        </section>
-        <section id="audio" class="section audio-section">
-            <h2 class="section-title">Voice Reels</h2>
-            <div class="audio-container">
-            <div class="audio-block">
-                <h3>Audiobook - General British</h3>
-                <audio controls>
-                    <source src="assets/SCOTT FLEMING - Audiobook reel - General British.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-            <div class="audio-block">
-                <h3>Audiobook - General American</h3>
-                <audio controls>
-                    <source src="assets/SCOTT FLEMING - Audiobook reel - General American.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
+      <section id="about" class="section">
+        <div class="about-container">
+          <img src="assets/profile.jpg" alt="Scott Fleming headshot" class="profile-img">
+          <p class="about-description">
+            Scott Fleming is a highly experienced performer with over 30 years in professional theatre, television, voice acting and vocal coaching. He’s taken leading roles in London’s West End and UK touring productions, building a distinguished career in the performing arts. 
+
+            Born and raised in Cornwall, he is now based in Truro, where he continues to perform and teach. As a voice actor and audiobook narrator, Scott has narrated over 100 titles, including works by authors like Colin Forbes, Morgan Greene, Jack Probyn and Richard Doyle. Notably, he brought ‘The Greek Key’, an espionage thriller, to life with his versatile narration skills. Recently he can be heard performing ‘Gallows Born’ and the further instalments of A.C Salter’s ‘Bane of the North’ series for Audible. 
+
+            Since 2005, Scott has also been a vocal and acting coach, mentoring aspiring performers across various styles such as musical theatre and contemporary vocals. His Scott Fleming Voice Academy offers in person and online training to students and professionals worldwide. Alongside coaching, Scott is an award-winning songwriter and remains active in composing, writing and performing. He has appeared in 4 series of Doc Martin for ITV1.
+          </p>
         </div>
-    </section>
-        <section id="projects" class="section">
+      </section>
+<section id="audio" class="section audio-section">
+  <div class="audio-tech-wrapper">
+    <div class="audio-column">
+  <h2 class="section-title">Voice Reels</h2>
+  <div class="audio-grid">
+    <div class="audio-block">
+      <h3>Audiobook – General British</h3>
+      <audio controls>
+    <source src="assets/SCOTT FLEMING - Audiobook reel - General British.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+      </audio>
+    </div>
+    <div class="audio-block">
+      <h3>Audiobook – General American</h3>
+      <audio controls>
+    <source src="assets/SCOTT FLEMING - Audiobook reel - General American.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+      </audio>
+    </div>
+  </div>
+    </div>
+
+    <div class="tech-column">
+  <h2 class="section-title">Studio Setup</h2>
+  <ul class="tech-list">
+    <li>
+      <a href="https://sessionbooth.co.uk/shop/vocal-booth-voiceover-pratice/dw-series-session-booth/" target="_blank">
+    DW Series Session Booth – Fully Soundproofed Vocal Booth
+      </a>
+    </li>
+    <li>
+      <a href="https://www.apple.com/uk/logic-pro/" target="_blank">
+    Logic Pro X – (DAW)
+      </a>
+    </li>
+    <li>
+      <a href="https://warmaudio.com/wa-87r2" target="_blank">
+    Warm Audio WA-87 R2 – Large Diaphragm Condenser Microphone
+      </a>
+    </li>
+    <li>
+      <a href="https://www.gear4music.com/Recording-and-Computers/Universal-Audio-Apollo-Twin-Solo-MkII-Thunderbolt/1SWI" target="_blank">
+    Universal Audio Apollo Twin X – High-End Audio Interface
+      </a>
+    </li>
+  </ul>
+
+  <div class="studio-photo">
+    <img src="assets/studio.jpeg" alt="Studio Setup Photo">
+  </div>
+    </div>
+
+  </div>
+</section>
+      <section id="projects" class="section"></section>
           <h2 class = "section-title">Projects:</h2>
           <div class="projects-grid">
             <div class="project-card">
