changes to social media logos size, mainly some css changes

--- a/index.html
+++ b/index.html
@@ -9,40 +9,41 @@
   <link rel="icon" href="assets/smalllogo.jpg" type="favicon">
 </head>
 <body>
-    <header>
-        <div class="header-container">
-          <a href="index.html">
-            <img src="assets/logo.png" alt="logo and home link" class="header-image">
+  <header class="site-header">
+    <div class="header-container">
+      <a href="index.html" class="logo-container">
+        <img src="assets/logo.png" alt="Scott Fleming Logo" class="header-image">
+      </a>
+      <ul class="social-media">
+        <li>
+          <a href="https://app.spotlight.com/2219-7839-1381" target="_blank">
+            <img src="assets/spotlightlogo.png" alt="Spotlight" class="social-icon">
           </a>
-          <ul class="social-media">
-            <li>
-              <a href="https://app.spotlight.com/2219-7839-1381" target="_blank">
-                <img src="assets/spotlightlogo.png" alt="Spotlight" class="social-icon">
-              </a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/scott-fleming-2b43946a/" target="_blank">
-                <img src="assets/linkedln.webp" alt="LinkedIn" class="social-icon">
-              </a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/scottflemingmusicandvoice/" target="_blank">
-                <img src="assets/instagram.webp" alt="Instagram" class="social-icon">
-              </a>
-            </li>
-            <li>
-              <a href="https://www.facebook.com/scottflemingmusic/" target="_blank">
-                <img src="assets/facebook.png" alt="Facebook" class="social-icon">
-              </a>
-            </li>
-            <li>
-              <a href="https://x.com/rsfoscar2" target="_blank">
-                <img src="assets/twitter.png" alt="Twitter" class="social-icon">
-              </a>
-            </li>
-          </ul>
-        </div>
-    </header>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/scott-fleming-2b43946a/" target="_blank">
+            <img src="assets/linkedln.webp" alt="LinkedIn" class="social-icon">
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/scottflemingmusicandvoice/" target="_blank">
+            <img src="assets/instagram.webp" alt="Instagram" class="social-icon">
+          </a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/scottflemingmusic/" target="_blank">
+            <img src="assets/facebook.png" alt="Facebook" class="social-icon">
+          </a>
+        </li>
+        <li>
+          <a href="https://x.com/rsfoscar2" target="_blank">
+            <img src="assets/twitter.png" alt="Twitter" class="social-icon">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </header>
+
       
     <main>
       <section id="about" class="section">
